--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "@types/react": "^16.4.0",
     "@types/react-native": "^0.55.14",
     "@types/react-test-renderer": "^16.0.1",
+    "husky": "^0.14.3",
     "jest-expo": "~27.0.0",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.13.5",
     "react-native-scripts-ts": "1.15.0",
     "react-native-typescript-transformer": "^1.2.3",
     "react-test-renderer": "16.3.1",
@@ -17,6 +20,8 @@
   },
   "main": "./node_modules/react-native-scripts-ts/build/bin/crna-entry.js",
   "scripts": {
+    "precommit": "lint-staged",
+    "lintfix": "prettier --write **/*.{ts,tsx,json,css}",
     "start": "react-native-scripts-ts start",
     "eject": "react-native-scripts-ts eject",
     "android": "react-native-scripts-ts android",
@@ -55,5 +60,11 @@
     "react": "16.3.1",
     "react-apollo": "^2.1.5",
     "react-native": "~0.55.2"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
