--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "react-native-app",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "@types/jest": "^22.2.3",
-    "@types/react": "^16.4.0",
-    "@types/react-native": "^0.55.14",
+    "@types/jest": "^23.1.1",
+    "@types/react": "^16.4.1",
+    "@types/react-native": "^0.55.22",
     "@types/react-test-renderer": "^16.0.1",
     "husky": "^0.14.3",
-    "jest-expo": "~27.0.0",
+    "jest-expo": "~28.0.0",
     "lint-staged": "^7.2.0",
     "prettier": "^1.13.5",
     "react-native-scripts-ts": "1.15.0",
     "react-native-typescript-transformer": "^1.2.3",
-    "react-test-renderer": "16.3.1",
+    "react-test-renderer": "16.4.1",
     "ts-jest": "^22.4.6",
     "tslib": "^1.9.1",
     "typescript": "^2.8.3"
@@ -52,14 +52,14 @@
     }
   },
   "dependencies": {
-    "apollo-boost": "^0.1.9",
-    "apollo-client": "^2.3.4",
-    "expo": "^27.0.1",
+    "apollo-boost": "^0.1.10",
+    "apollo-client": "^2.3.5",
+    "expo": "^28.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
-    "react": "16.3.1",
-    "react-apollo": "^2.1.5",
-    "react-native": "~0.55.2"
+    "react": "16.4.1",
+    "react-apollo": "^2.1.6",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css}": [
