--- a/app.json
+++ b/app.json
@@ -9,6 +9,10 @@
     "android": {
       "package": "com.xcv58"
     },
+    "splash": {
+      "image": "./assets/splash.png",
+      "backgroundColor": "#FC8383"
+    },
     "sdkVersion": "28.0.0",
     "packagerOpts": {
       "sourceExts": ["ts", "tsx"],
