--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "graphql-tag": "^2.9.2",
     "react": "16.3.1",
     "react-apollo": "^2.1.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-native-auth0": "^1.2.2"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css}": [
